# sublime-autosidebar

./: AutoSidebar.sublime-commands  LICENSE.txt  README.md  autosidebar.py  pyproject.toml
typings/: sublime.pyi  sublime_plugin.pyi
