[tool.poetry]
name = "sublime-autosidebar"
version = "2023.10.1"
description = "Sublime Text plugin to display/hide the sidebar automatically."
authors = ["Alan Reyes <kutt@katrea.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingModuleSource = "none"
